2006-05-23  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/Makefile.am
    Update check-asm rule to check src_linear.c and src_zoh.c.

    * src/src_linear.c
    Remove all uses of floor() function.

2006-04-18  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/samplerate.[ch] src/Version_script.in
    Add functions src_int_to_float_array and src_float_to_int_array.

    * tests/float_short_test.c
    Update test to including testing of above.

    * doc/api_misc.html
    Update docs fro the above addition.

2006-03-31  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/common.h src/src_*.c src/samplerate.c
    Add slots for vari_process and const_process functions.

    * tests/varispeed_test.c tests/Makefile.am
    Add new test and hook into build.

    * tests/util.[ch]
    Add new function reverse_data.

2005-12-29  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * examples/sndfile-resample.c
    Exit if SRC ratio is 1.0. Suggested by Bram de Jong.

2005-11-19  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * examples/timewarp-file.c
    New file.

2005-09-06  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/float_cast.h
    Update to include Cygwin specific fixes.

    * doc/api_callback.html
    Complete the documentation of the callback API.

2005-08-11  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * tests/termination_test.c
    Rename term_test() to init_term_test() and add extra test functionality
    to sanity test the first sample output after reset.

    * src/src_zoh.c src/src_linear.c
    Fix bug found by new test. Thanks Stas Sergeev for bringint this to my
    attention.

2005-08-02  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * doc/Makefile.am
    Fix a bug preventing the inclusion of the html API docs in the tarball.

    * src/src_zoh.c src/src_linear.c
    Improve calculation of input_index.
    Fix updating of input_index (thanks to Stas Sergeev).
