@@ -74,12 +74,12 @@ main (int argc, char *argv [])
 			8,
 			BOOLEAN_FALSE,
 			{	{	1,	{ 0.01111111111 },		3.0,		1,	 28.0,	1.0 },
-				{	1,	{ 0.01111111111 },		0.6,		1,	 37.0,	1.0 },
-				{	1,	{ 0.01111111111 },		0.3,		1,	 37.0,	1.0 },
+				{	1,	{ 0.01111111111 },		0.6,		1,	 36.0,	1.0 },
+				{	1,	{ 0.01111111111 },		0.3,		1,	 36.0,	1.0 },
 				{	1,	{ 0.01111111111 },		1.0,		1,	150.0,	1.0 },
 				{	1,	{ 0.01111111111 },		1.001,		1,	 38.0,	1.0 },
 				{	2,	{ 0.011111, 0.324 },	1.9999,		2,	 14.0,	1.0 },
-				{	2,	{ 0.012345, 0.457 },	0.456789,	1,	 32.0,	1.0 },
+				{	2,	{ 0.012345, 0.457 },	0.456789,	1,	 12.0,	1.0 },
 				{	1,	{ 0.3511111111 },		1.33,		1,	 10.0,	1.0 }
 				}
 			},
@@ -88,12 +88,12 @@ main (int argc, char *argv [])
 			8,
 			BOOLEAN_FALSE,
 			{	{	1,	{ 0.01111111111 },		3.0,		1,	 73.0,	1.0 },
-				{	1,	{ 0.01111111111 },		0.6,		1,	 74.0,	1.0 },
-				{	1,	{ 0.01111111111 },		0.3,		1,	 74.0,	1.0 },
+				{	1,	{ 0.01111111111 },		0.6,		1,	 73.0,	1.0 },
+				{	1,	{ 0.01111111111 },		0.3,		1,	 73.0,	1.0 },
 				{	1,	{ 0.01111111111 },		1.0,		1,	150.0,	1.0 },
 				{	1,	{ 0.01111111111 },		1.001,		1,	 77.0,	1.0 },
-				{	2,	{ 0.011111, 0.324 },	1.9999,		2,	 97.0,	0.94 },
-				{	2,	{ 0.012345, 0.457 },	0.456789,	1,	 60.0,	0.96 },
+				{	2,	{ 0.011111, 0.324 },	1.9999,		2,	 16.0,	0.94 },
+				{	2,	{ 0.012345, 0.457 },	0.456789,	1,	 26.0,	0.96 },
 				{	1,	{ 0.3511111111 },		1.33,		1,	 22.0,	0.99 }
 				}
 			},
@@ -102,7 +102,7 @@ main (int argc, char *argv [])
 			9,
 			BOOLEAN_TRUE,
 			{	{	1,	{ 0.01111111111 },		3.0,		1,	100.0,	1.0 },
-				{	1,	{ 0.01111111111 },		0.6,		1,	100.0,	1.0 },
+				{	1,	{ 0.01111111111 },		0.6,		1,	 99.0,	1.0 },
 				{	1,	{ 0.01111111111 },		0.3,		1,	100.0,	1.0 },
 				{	1,	{ 0.01111111111 },		1.0,		1,	150.0,	1.0 },
 				{	1,	{ 0.01111111111 },		1.001,		1,	100.0,	1.0 },
@@ -117,7 +117,7 @@ main (int argc, char *argv [])
 			9,
 			BOOLEAN_TRUE,
 			{	{	1,	{ 0.01111111111 },		3.0,		1,	100.0,	1.0 },
-				{	1,	{ 0.01111111111 },		0.6,		1,	100.0,	1.0 },
+				{	1,	{ 0.01111111111 },		0.6,		1,	 99.0,	1.0 },
 				{	1,	{ 0.01111111111 },		0.3,		1,	100.0,	1.0 },
 				{	1,	{ 0.01111111111 },		1.0,		1,	149.0,	1.0 },
 				{	1,	{ 0.01111111111 },		1.001,		1,	100.0,	1.0 },
